# Local_deployment_of_DeepSeek

./: Files_analysis.py  README.md  pyproject.toml
Database/: example.txt
src/Local_deployment_of_DeepSeek/: __init__.py  main.py
