[tool.poetry]
name = "Local_deployment_of_DeepSeek"
version = "0.1.0"
description = "DeepSeek本地部署的简单应用"
authors = ["FatShu <2077437038@qq.com>"]
readme = "README.md"
packages = [{include = "Local_deployment_of_DeepSeek", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.1.3"
openpyxl = "^3.1.2"
python-docx = "^0.8.11"
textract = "^1.6.5"
python-pptx = "^0.6.24"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
black = "^23.12.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
    